@@ -26,10 +26,12 @@ Master (development)
 - fixed a bug in the symmetry operations of space group 166 (R-3m).
 - fixed a bug when writing LAMMPS data files (*.lmp): if atom types were defined, the types written in the "Masses" section did not match the atom types used in the "Atoms" section.
 - fixed a bug when reading Quantum Espresso output files (*.out) in mode "--one-in-all".
+- fixed a bug in option "-dislocation" where the theoretical stresses were not computed for mixed dislocations.
 - fixed a bug in option "-cut", where Miller indices were assumed to refer to an orthogonal box. Now the actual box vectors are used.
 - fixed a bug in option "-separate", that caused a segfault when the radius was too large.
 - program now warns when atoms of same species have the same value of "type" defined as auxiliary property.
-- scripts "install.sh" now proposes to install in user's home directory.
+- script "install.sh" now proposes to install in user's home directory (in ~/bin/). This path is added to the user's PATH environment variable (in the file ~/.bashrc).
+- installer for Microsoft(R) Windows(R) systems now adds Atomsk install directory to the PATH environment variable. As a result, "atomsk.exe" can be executed from anywhere without writing its full path.
 
 
 Beta 0.10.6 (07 Sept. 2018)
